Add cache layer to reduce GeoIp data retrieval latency (#343)
Signed-off-by: Heemin Kim <heemin@amazon.com>