@@ -6,10 +6,10 @@
 package org.opensearch.geospatial.ip2geo.processor;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -24,7 +24,6 @@ import lombok.SneakyThrows;
 
 import org.junit.Before;
 import org.mockito.ArgumentCaptor;
-import org.opensearch.action.ActionListener;
 import org.opensearch.common.Randomness;
 import org.opensearch.geospatial.GeospatialTestHelper;
 import org.opensearch.geospatial.ip2geo.Ip2GeoTestCase;
@@ -34,8 +33,6 @@ import org.opensearch.ingest.IngestDocument;
 
 public class Ip2GeoProcessorTests extends Ip2GeoTestCase {
     private static final String DEFAULT_TARGET_FIELD = "ip2geo";
-    private static final String CONFIG_DATASOURCE_KEY = "datasource";
-    private static final String CONFIG_FIELD_KEY = "field";
     private static final List<String> SUPPORTED_FIELDS = Arrays.asList("city", "country");
     private Ip2GeoProcessor.Factory factory;
 
@@ -112,36 +109,69 @@ public class Ip2GeoProcessorTests extends Ip2GeoTestCase {
     public void testExecute_whenExpired_thenExpiredMsg() {
         String datasourceName = GeospatialTestHelper.randomLowerCaseString();
         Ip2GeoProcessor processor = createProcessor(datasourceName, Collections.emptyMap());
-
-        Map<String, Object> source = new HashMap<>();
-        String ip = randomIpAddress();
-        source.put("ip", ip);
-        IngestDocument document = new IngestDocument(source, new HashMap<>());
-
-        String index = GeospatialTestHelper.randomLowerCaseString();
-        when(ip2GeoCachedDao.getIndexName(datasourceName)).thenReturn(index);
-        when(ip2GeoCachedDao.has(datasourceName)).thenReturn(true);
-        when(ip2GeoCachedDao.isExpired(datasourceName)).thenReturn(true);
-        when(ip2GeoCachedDao.getState(datasourceName)).thenReturn(DatasourceState.AVAILABLE);
-
         BiConsumer<IngestDocument, Exception> handler = mock(BiConsumer.class);
 
-        // Run
-        processor.execute(document, handler);
+        String indexName = GeospatialTestHelper.randomLowerCaseString();
+        when(ip2GeoCachedDao.getIndexName(datasourceName)).thenReturn(indexName);
+        when(ip2GeoCachedDao.has(datasourceName)).thenReturn(true);
+        when(ip2GeoCachedDao.getState(datasourceName)).thenReturn(DatasourceState.AVAILABLE);
+        when(ip2GeoCachedDao.isExpired(datasourceName)).thenReturn(true);
+        Map<String, Object> geoData = Map.of("city", "Seattle", "country", "USA");
+        when(ip2GeoCachedDao.getGeoData(eq(indexName), any())).thenReturn(geoData);
+
+        // Run for single ip
+        String ip = randomIpAddress();
+        IngestDocument documentWithIp = createDocument(ip);
+        processor.execute(documentWithIp, handler);
 
         // Verify
-        verify(handler).accept(document, null);
-        assertEquals("ip2geo_data_expired", document.getFieldValue(DEFAULT_TARGET_FIELD + ".error", String.class));
+        verify(handler).accept(documentWithIp, null);
+        assertEquals("ip2geo_data_expired", documentWithIp.getFieldValue(DEFAULT_TARGET_FIELD + ".error", String.class));
+
+        // Run for multi ips
+        List<String> ips = Arrays.asList(randomIpAddress(), randomIpAddress());
+        IngestDocument documentWithIps = createDocument(ips);
+        processor.execute(documentWithIps, handler);
+
+        // Verify
+        verify(handler).accept(documentWithIps, null);
+        assertEquals("ip2geo_data_expired", documentWithIp.getFieldValue(DEFAULT_TARGET_FIELD + ".error", String.class));
     }
 
     @SneakyThrows
-    public void testExecuteInternal_whenSingleIp_thenGetDatasourceIsCalled() {
+    public void testExecute_whenNotAvailable_thenException() {
         String datasourceName = GeospatialTestHelper.randomLowerCaseString();
         Ip2GeoProcessor processor = createProcessor(datasourceName, Collections.emptyMap());
-        Map<String, Object> source = new HashMap<>();
+        BiConsumer<IngestDocument, Exception> handler = mock(BiConsumer.class);
+
+        String indexName = GeospatialTestHelper.randomLowerCaseString();
+        when(ip2GeoCachedDao.getIndexName(datasourceName)).thenReturn(indexName);
+        when(ip2GeoCachedDao.has(datasourceName)).thenReturn(true);
+        when(ip2GeoCachedDao.getState(datasourceName)).thenReturn(DatasourceState.CREATE_FAILED);
+        when(ip2GeoCachedDao.isExpired(datasourceName)).thenReturn(false);
+        Map<String, Object> geoData = Map.of("city", "Seattle", "country", "USA");
+        when(ip2GeoCachedDao.getGeoData(eq(indexName), any())).thenReturn(geoData);
+
+        // Run for single ip
         String ip = randomIpAddress();
-        source.put("ip", ip);
-        IngestDocument document = new IngestDocument(source, new HashMap<>());
+        IngestDocument documentWithIp = createDocument(ip);
+        processor.execute(documentWithIp, handler);
+
+        // Run for multi ips
+        List<String> ips = Arrays.asList(randomIpAddress(), randomIpAddress());
+        IngestDocument documentWithIps = createDocument(ips);
+        processor.execute(documentWithIps, handler);
+
+        // Verify
+        ArgumentCaptor<Exception> captor = ArgumentCaptor.forClass(IllegalStateException.class);
+        verify(handler, times(2)).accept(isNull(), captor.capture());
+        assertTrue(captor.getAllValues().stream().allMatch(e -> e.getMessage().contains("not in an available state")));
+    }
+
+    @SneakyThrows
+    public void testExecute_whenCalled_thenGeoIpDataIsAdded() {
+        String datasourceName = GeospatialTestHelper.randomLowerCaseString();
+        Ip2GeoProcessor processor = createProcessor(datasourceName, Collections.emptyMap());
         BiConsumer<IngestDocument, Exception> handler = mock(BiConsumer.class);
 
         String indexName = GeospatialTestHelper.randomLowerCaseString();
@@ -149,97 +179,66 @@ public class Ip2GeoProcessorTests extends Ip2GeoTestCase {
         when(ip2GeoCachedDao.has(datasourceName)).thenReturn(true);
         when(ip2GeoCachedDao.getState(datasourceName)).thenReturn(DatasourceState.AVAILABLE);
         when(ip2GeoCachedDao.isExpired(datasourceName)).thenReturn(false);
+        Map<String, Object> geoData = Map.of("city", "Seattle", "country", "USA");
+        when(ip2GeoCachedDao.getGeoData(eq(indexName), any())).thenReturn(geoData);
 
-        // Run
-        processor.executeInternal(document, handler, ip);
+        // Run for single ip
+        String ip = randomIpAddress();
+        IngestDocument documentWithIp = createDocument(ip);
+        processor.execute(documentWithIp, handler);
 
         // Verify
-        verify(geoIpDataDao).getGeoIpData(anyString(), anyString(), any(ActionListener.class));
+        assertEquals(geoData.get("city"), documentWithIp.getFieldValue("ip2geo.city", String.class));
+        assertEquals(geoData.get("country"), documentWithIp.getFieldValue("ip2geo.country", String.class));
+
+        // Run for multi ips
+        List<String> ips = Arrays.asList(randomIpAddress(), randomIpAddress());
+        IngestDocument documentWithIps = createDocument(ips);
+        processor.execute(documentWithIps, handler);
+
+        // Verify
+        assertEquals(2, documentWithIps.getFieldValue("ip2geo", List.class).size());
+        Map<String, Object> addedValue = (Map<String, Object>) documentWithIps.getFieldValue("ip2geo", List.class).get(0);
+        assertEquals(geoData.get("city"), addedValue.get("city"));
+        assertEquals(geoData.get("country"), addedValue.get("country"));
     }
 
     @SneakyThrows
-    public void testGetSingleGeoIpDataListener_whenNoPropertySet_thenAddAllProperties() {
+    public void testExecute_whenPropertiesSet_thenFilteredGeoIpDataIsAdded() {
         String datasourceName = GeospatialTestHelper.randomLowerCaseString();
-        Ip2GeoProcessor processor = createProcessor(datasourceName, Collections.emptyMap());
-        Map<String, Object> source = new HashMap<>();
-        String ip = randomIpAddress();
-        source.put("ip", ip);
-        IngestDocument document = new IngestDocument(source, new HashMap<>());
+        Ip2GeoProcessor processor = createProcessor(datasourceName, Map.of(Ip2GeoProcessor.CONFIG_PROPERTIES, Arrays.asList("country")));
         BiConsumer<IngestDocument, Exception> handler = mock(BiConsumer.class);
 
-        Map<String, Object> geoIpData = Map.of("city", "Seattle", "country", "USA");
-        // Run
-        processor.getSingleGeoIpDataListener(document, handler).onResponse(geoIpData);
+        String indexName = GeospatialTestHelper.randomLowerCaseString();
+        when(ip2GeoCachedDao.getIndexName(datasourceName)).thenReturn(indexName);
+        when(ip2GeoCachedDao.has(datasourceName)).thenReturn(true);
+        when(ip2GeoCachedDao.getState(datasourceName)).thenReturn(DatasourceState.AVAILABLE);
+        when(ip2GeoCachedDao.isExpired(datasourceName)).thenReturn(false);
+        Map<String, Object> geoData = Map.of("city", "Seattle", "country", "USA");
+        when(ip2GeoCachedDao.getGeoData(eq(indexName), any())).thenReturn(geoData);
 
-        // Verify
-        assertEquals("Seattle", document.getFieldValue(DEFAULT_TARGET_FIELD + ".city", String.class));
-        assertEquals("USA", document.getFieldValue(DEFAULT_TARGET_FIELD + ".country", String.class));
-        verify(handler).accept(document, null);
-    }
-
-    @SneakyThrows
-    public void testGetSingleGeoIpDataListener_whenPropertySet_thenAddOnlyTheProperties() {
-        String datasourceName = GeospatialTestHelper.randomLowerCaseString();
-        Ip2GeoProcessor processor = createProcessor(datasourceName, Map.of("properties", Arrays.asList("city")));
-        Map<String, Object> source = new HashMap<>();
+        // Run for single ip
         String ip = randomIpAddress();
-        source.put("ip", ip);
-        IngestDocument document = new IngestDocument(source, new HashMap<>());
-        BiConsumer<IngestDocument, Exception> handler = mock(BiConsumer.class);
-
-        Map<String, Object> geoIpData = Map.of("city", "Seattle", "country", "USA");
-        // Run
-        processor.getSingleGeoIpDataListener(document, handler).onResponse(geoIpData);
+        IngestDocument documentWithIp = createDocument(ip);
+        processor.execute(documentWithIp, handler);
 
         // Verify
-        assertEquals("Seattle", document.getFieldValue(DEFAULT_TARGET_FIELD + ".city", String.class));
-        assertFalse(document.hasField(DEFAULT_TARGET_FIELD + ".country"));
-        verify(handler).accept(document, null);
-    }
+        assertFalse(documentWithIp.hasField("ip2geo.city"));
+        assertEquals(geoData.get("country"), documentWithIp.getFieldValue("ip2geo.country", String.class));
 
-    @SneakyThrows
-    public void testGetMultiGeoIpDataListener_whenNoPropertySet_thenAddAllProperties() {
-        String datasourceName = GeospatialTestHelper.randomLowerCaseString();
-        Ip2GeoProcessor processor = createProcessor(datasourceName, Collections.emptyMap());
-        Map<String, Object> source = new HashMap<>();
-        String ip = randomIpAddress();
-        source.put("ip", ip);
-        IngestDocument document = new IngestDocument(source, new HashMap<>());
-        BiConsumer<IngestDocument, Exception> handler = mock(BiConsumer.class);
-
-        Map<String, Object> geoIpData = Map.of("city", "Seattle", "country", "USA");
-        // Run
-        processor.getMultiGeoIpDataListener(document, handler).onResponse(Arrays.asList(geoIpData));
+        // Run for multi ips
+        List<String> ips = Arrays.asList(randomIpAddress(), randomIpAddress());
+        IngestDocument documentWithIps = createDocument(ips);
+        processor.execute(documentWithIps, handler);
 
         // Verify
-        assertEquals(1, document.getFieldValue(DEFAULT_TARGET_FIELD, List.class).size());
-        assertEquals("Seattle", document.getFieldValue(DEFAULT_TARGET_FIELD + ".0.city", String.class));
-        assertEquals("USA", document.getFieldValue(DEFAULT_TARGET_FIELD + ".0.country", String.class));
-        verify(handler).accept(document, null);
+        assertEquals(2, documentWithIps.getFieldValue("ip2geo", List.class).size());
+        Map<String, Object> addedValue = (Map<String, Object>) documentWithIps.getFieldValue("ip2geo", List.class).get(0);
+        assertFalse(addedValue.containsKey("city"));
+        assertEquals(geoData.get("country"), addedValue.get("country"));
     }
 
-    @SneakyThrows
-    public void testGetMultiGeoIpDataListener_whenPropertySet_thenAddOnlyTheProperties() {
-        String datasourceName = GeospatialTestHelper.randomLowerCaseString();
-        Ip2GeoProcessor processor = createProcessor(datasourceName, Map.of("properties", Arrays.asList("city")));
-        Map<String, Object> source = new HashMap<>();
-        String ip = randomIpAddress();
-        source.put("ip", ip);
-        IngestDocument document = new IngestDocument(source, new HashMap<>());
-        BiConsumer<IngestDocument, Exception> handler = mock(BiConsumer.class);
-
-        Map<String, Object> geoIpData = Map.of("city", "Seattle", "country", "USA");
-        // Run
-        processor.getMultiGeoIpDataListener(document, handler).onResponse(Arrays.asList(geoIpData));
-
-        // Verify
-        assertEquals(1, document.getFieldValue(DEFAULT_TARGET_FIELD, List.class).size());
-        assertEquals("Seattle", document.getFieldValue(DEFAULT_TARGET_FIELD + ".0.city", String.class));
-        assertFalse(document.hasField(DEFAULT_TARGET_FIELD + ".0.country"));
-        verify(handler).accept(document, null);
-    }
-
-    public void testExecuteNotImplemented() throws Exception {
+    public void testExecute_whenNoHandler_thenException() throws Exception {
         String datasourceName = GeospatialTestHelper.randomLowerCaseString();
         Ip2GeoProcessor processor = createProcessor(datasourceName, Collections.emptyMap());
         IngestDocument document = new IngestDocument(Collections.emptyMap(), Collections.emptyMap());
@@ -247,42 +246,22 @@ public class Ip2GeoProcessorTests extends Ip2GeoTestCase {
         assertTrue(e.getMessage().contains("Not implemented"));
     }
 
-    public void testExecuteInternalNonStringIp() throws Exception {
+    public void testExecute_whenContainsNonString_thenException() throws Exception {
         String datasourceName = GeospatialTestHelper.randomLowerCaseString();
         Ip2GeoProcessor processor = createProcessor(datasourceName, Collections.emptyMap());
         List<?> ips = Arrays.asList(randomIpAddress(), 1);
         Map<String, Object> source = new HashMap<>();
-        String ip = randomIpAddress();
-        source.put("ip", ip);
-        IngestDocument document = new IngestDocument(source, new HashMap<>());
-
-        BiConsumer<IngestDocument, Exception> handler = mock(BiConsumer.class);
-        Exception e = expectThrows(IllegalArgumentException.class, () -> processor.executeInternal(document, handler, ips));
-        assertTrue(e.getMessage().contains("should only contain strings"));
-    }
-
-    @SneakyThrows
-    public void testExecuteInternal_whenMultiIps_thenGetDatasourceIsCalled() {
-        String datasourceName = GeospatialTestHelper.randomLowerCaseString();
-        Ip2GeoProcessor processor = createProcessor(datasourceName, Collections.emptyMap());
-        Map<String, Object> source = new HashMap<>();
-        String ip = randomIpAddress();
-        source.put("ip", ip);
+        source.put("ip", ips);
         IngestDocument document = new IngestDocument(source, new HashMap<>());
         BiConsumer<IngestDocument, Exception> handler = mock(BiConsumer.class);
-        List<?> ips = Arrays.asList(randomIpAddress(), randomIpAddress());
-
-        String indexName = GeospatialTestHelper.randomLowerCaseString();
-        when(ip2GeoCachedDao.getIndexName(datasourceName)).thenReturn(indexName);
-        when(ip2GeoCachedDao.has(datasourceName)).thenReturn(true);
-        when(ip2GeoCachedDao.getState(datasourceName)).thenReturn(DatasourceState.AVAILABLE);
-        when(ip2GeoCachedDao.isExpired(datasourceName)).thenReturn(false);
 
         // Run
-        processor.executeInternal(document, handler, ips);
+        processor.execute(document, handler);
 
         // Verify
-        verify(geoIpDataDao).getGeoIpData(anyString(), anyList(), any(ActionListener.class));
+        ArgumentCaptor<Exception> captor = ArgumentCaptor.forClass(IllegalArgumentException.class);
+        verify(handler).accept(isNull(), captor.capture());
+        assertTrue(captor.getValue().getMessage().contains("should only contain strings"));
     }
 
     private Ip2GeoProcessor createProcessor(final String datasourceName, final Map<String, Object> config) throws Exception {
@@ -296,8 +275,8 @@ public class Ip2GeoProcessorTests extends Ip2GeoTestCase {
     private Ip2GeoProcessor createProcessor(final Datasource datasource, final Map<String, Object> config) throws Exception {
         when(datasourceDao.getDatasource(datasource.getName())).thenReturn(datasource);
         Map<String, Object> baseConfig = new HashMap<>();
-        baseConfig.put(CONFIG_FIELD_KEY, "ip");
-        baseConfig.put(CONFIG_DATASOURCE_KEY, datasource.getName());
+        baseConfig.put(Ip2GeoProcessor.CONFIG_FIELD, "ip");
+        baseConfig.put(Ip2GeoProcessor.CONFIG_DATASOURCE, datasource.getName());
         baseConfig.putAll(config);
 
         return factory.create(
@@ -306,5 +285,17 @@ public class Ip2GeoProcessorTests extends Ip2GeoTestCase {
             GeospatialTestHelper.randomLowerCaseString(),
             baseConfig
         );
+    }
+
+    private IngestDocument createDocument(String ip) {
+        Map<String, Object> source = new HashMap<>();
+        source.put("ip", ip);
+        return new IngestDocument(source, new HashMap<>());
+    }
+
+    private IngestDocument createDocument(List<String> ips) {
+        Map<String, Object> source = new HashMap<>();
+        source.put("ip", ips);
+        return new IngestDocument(source, new HashMap<>());
     }
 }
